make camera follow player properly, begin fixing camera out of bounds bug

--- a/css/master.css
+++ b/css/master.css
@@ -5,7 +5,7 @@ body, html {
   overflow: hidden;
 }
 
-#background-canvas, #cell-canvas {
+#game-canvas {
   position: absolute;
   top: 0;
   right: 0;
